change text and font size in contact

--- a/index.html
+++ b/index.html
@@ -145,21 +145,21 @@
         <p class="contact__box--text">W razie potrzeby prosimy kontaktować się z poniższymi osobami. </p>
         <ol>
           <li>
-            <h3 class="contact__box--tittle">Aleksandra <a href="#"><img class="contact__box--icons"
-                  src="./img/icons/messager-removebg-preview.png"></a></h3>
+            <p class="contact__box--tittle">Aleksandra <a href="#"><img class="contact__box--icons"
+                  src="./img/icons/messager-removebg-preview.png"></a></p>
           </li>
           <li>
-            <h3 class="contact__box--tittle">Patryk <a href="#"><img class="contact__box--icons"
-                  src="./img/icons/messager-removebg-preview.png"></a></h3>
+            <p class="contact__box--tittle">Patryk <a href="#"><img class="contact__box--icons"
+                  src="./img/icons/messager-removebg-preview.png"></a></p>
           </li>
           <li>
-            <h3 class="contact__box--tittle">Klaudia Ciepłucha - świadkowa Oli<a href="#"><img
-                  class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></h3>
+            <p class="contact__box--tittle">Klaudia Ciepłucha - świadkowa Oli<a href="#"><img
+                  class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></p>
             <!-- Klaudia Lewandowska - świadkowa-  w marcu będę musiał podmienić nazwisko xD to sobie juz placeholdera zrobiłem ;)  -->
           </li>
           <li>
-            <h3 class="contact__box--tittle">Mariusz Wiśniewski - świadek Patryka<a href="#"><img
-                  class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></h3>
+            <p class="contact__box--tittle">Mariusz Wiśniewski - świadek Patryka<a href="#"><img
+                  class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></p>
           </li>
         </ol>
       </div>
@@ -184,7 +184,7 @@
     <div class="wrapper">
       <h2 class="section-heading">plan wesela</h2>
       <div class="plan__box">
-        <p class="plan__box--text">w tym miejscu będzie plan wesela :)</p>
+        <p class="plan__box--text">Plan wesela pojawi się około 2 miesiące przed ślubem :)</p>
       </div>
     </div>
   </section>
@@ -193,7 +193,7 @@
     <div class="wrapper">
       <h2 class="section-heading">menu weselne</h2>
       <div class="menu__box">
-        <p class="menu__box--text">w tym miejscu będzie menu weselne :)</p>
+        <p class="menu__box--text">Menu pojawi się około 2 miesiące przed ślubem :)</p>
       </div>
     </div>
   </section>
@@ -202,10 +202,9 @@
     <div class="wrapper">
       <h2 class="section-heading">zdjęcia</h2>
       <div class="photos__box">
-        <p class="photos__box--text">w tym miejscu będą zdjęcia :)</p>
+        <p class="photos__box--text">Link do zdjęć prześlemy Wam, gdy tylko otrzymamy go od fotografa :)</p>
       </div>
     </div>
-
 
     <footer class="footer">
       <div class="wrapper"></div>
