change name, text fix

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="wrapper">
       <div class="contact__box">
         <h2 class="section-heading">kontakt</h2>
-        <p class="contact__box--text">W razie potrzeby prosimy kontaktować się z poniższymi osobami. </p>
+        <p class="contact__box--text">W razie potrzeby prosimy o kontaktowanie się z poniższymi osobami: </p>
         <ol>
           <li>
             <p class="contact__box--tittle">Aleksandra <a href="#"><img class="contact__box--icons"
@@ -153,9 +153,8 @@
                   src="./img/icons/messager-removebg-preview.png"></a></p>
           </li>
           <li>
-            <p class="contact__box--tittle">Klaudia Ciepłucha - świadkowa Oli<a href="#"><img
+            <p class="contact__box--tittle">Klaudia Lewandowska - świadkowa Oli<a href="#"><img
                   class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></p>
-            <!-- Klaudia Lewandowska - świadkowa-  w marcu będę musiał podmienić nazwisko xD to sobie juz placeholdera zrobiłem ;)  -->
           </li>
           <li>
             <p class="contact__box--tittle">Mariusz Wiśniewski - świadek Patryka<a href="#"><img
