--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="info__box--list">
         <ol>
           <li>
-            <img class="info__box--icons" src="./img/icons/federal-palace-of-switzerland.png">
+            <img class="info__box--icons" src="./img/icons/arch.png">
             <h3 class="info__box--tittle">Gdzie odbędzie się ceremonia zaślubin?</h3>
             <p class="info__box--text">Ceremonia odbędzie się w ogrodzie sali weselnej Nowa Holandia przy obwodnicy
               Elbląga.</p>
