--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2337.4599381008347!2d19.414231016137602!3d54.136497880152234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46fd4ce288cd6139%3A0xb16e7886925213f1!2sNowa%20Holandia!5e0!3m2!1sen!2spl!4v1665783352748!5m2!1sen!2spl"
           allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <a class="map__box--link"
+      <button class="map__button"><a class="map__button--link"
         href="https://www.google.com/maps/search/?api=1&query=Nowa+Holandia+-+Grill+Bar+i+Restauracja" target="_blank"
-        rel="noopener noreferrer">LINK DO MAPY</a>
+        rel="noopener noreferrer"><p class="map__button--text">LINK DO MAPY</p></a></button>
     </div>
   </section>
 
@@ -202,6 +202,7 @@
       <h2 class="section-heading">zdjęcia</h2>
       <div class="photos__box">
         <p class="photos__box--text">Link do zdjęć prześlemy Wam, gdy tylko otrzymamy go od fotografa :)</p>
+        <button class="photos__box__button">Dodaj zdjęcia</button>
       </div>
     </div>
 
