add href to photos button

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <h2 class="section-heading">zdjęcia</h2>
       <div class="photos__box">
         <p class="photos__box--text">Link do zdjęć prześlemy Wam, gdy tylko otrzymamy go od fotografa :)</p>
-        <button class="photos__box__button">Dodaj zdjęcia</button>
+        <button class="photos__box__button"><a class="photos__box__button--link" href="#">Dodaj zdjęcie</a></button>
       </div>
     </div>
 
