add target="_blank" for photo button

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       <div class="photos__box">
         <p class="photos__box--text">Link do zdjęć prześlemy Wam, gdy tylko otrzymamy go od fotografa :)</p>
       </div>
-      <button class="button"><a class="button--link" href="#"><p class="button--text">dodaj zdjęcie</p></a></button>
+      <button class="button"><a class="button--link" href="#" target="_blank" ><p class="button--text">dodaj zdjęcie</p></a></button>
     </div>
 
     <footer class="footer">
