--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="nav__items">
       <a href="#home" class="nav__item homeBtn">Strona główna</a>
       <a href="#QandA" class="nav__item QandABtn">Q&A</a>
-      <a href="#weddingPlan" class="nav__item planBtn">Plan ślubu i wesela</a>
+      <a href="#weddingPlan" class="nav__item planBtn">Plan wesela</a>
       <a href="#weddingMenu" class="nav__item menuBtn">Menu</a>
       <a href="#placeWithMap" class="nav__item mapBtn">Mapa</a>
       <a href="#contactToUs" class="nav__item contactBtn">Kontakt</a>
@@ -67,7 +67,7 @@
     <div class="nav__items">
       <a href="#home" class="nav__item homeBtn">Strona główna</a>
       <a href="#QandA" class="nav__item QandABtn">Q&A</a>
-      <a href="#weddingPlan" class="nav__item planBtn">Plan ślubu i Wesela</a>
+      <a href="#weddingPlan" class="nav__item planBtn">Plan wesela</a>
       <a href="#weddingMenu" class="nav__item menuBtn">Menu</a>
       <a href="#placeWithMap" class="nav__item mapBtn">Mapa</a>
       <a href="#contactToUs" class="nav__item contactBtn">Kontakt</a>
@@ -192,7 +192,35 @@
     <div class="wrapper">
       <h2 class="section-heading">menu weselne</h2>
       <div class="menu__box">
-        <p class="menu__box--text">Menu pojawi się około 2 miesiące przed ślubem :)</p>
+        <img class="menu__box--icons" src="./img/icons/wedding-cake.png">
+        <ol>
+          <li class="">
+            <h3 class="menu__box--tittle">Zupa</h3>
+            <p class="menu__box--text">Rosół drobiowy z cząsteczkami mięsiwa, warzywami i kluseczkami maślanymi</p>
+          </li>
+          <li>
+            <h3 class="menu__box--tittle">Danie główne</h3>
+            <p class="menu__box--text">Tradycyjny De Volaille z ziemniakami z wody i koprem oraz zestawem surówek</p>
+          </li>
+          <li>
+            <h3 class="menu__box--tittle">Kolacja</h3>
+            <p class="menu__box--text">Pieczone udka kurczaka</p>
+            <p class="menu__box--text">Żeberka wieprzowe w sosie BBQ</p>
+            <p class="menu__box--text">Łosoś w sosie szafranowym</p>
+            <p class="menu__box--text">Gnocchi z klarowanym masłem i pietruszką</p>
+            <p class="menu__box--text">Gratin ziemniaczano - brokułowe</p>
+            <p class="menu__box--text">Ratatui a'la Gousto</p>
+            <p class="menu__box--text">Serek Camembert na sosie malinowym</p>
+          </li>
+          <li>
+            <h3 class="menu__box--tittle">W nocy...</h3>
+            <p class="menu__box--text">Barszcz czysty z krokietem</p>
+          </li>
+          <li>
+            <h3 class="menu__box--tittle">Tort</h3>
+            <p class="menu__box--text">o smaku mango-marakuja z paloną białą czekoladą i spodem z prażynek</p>
+          </li>
+        </ol>
       </div>
     </div>
   </section>
