--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="wrapper">
       <h2 class="section-heading">plan wesela</h2>
       <div class="plan__box">
-        <p class="plan__box--text">Plan wesela pojawi się około 2 miesiące przed ślubem :)</p>
+        <p class="plan__box--text">Plan wesela pojawi się około 2 tygodnie przed ślubem :)</p>
       </div>
     </div>
   </section>
