fixed scss for menu section

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       <div class="header__timer__body">
         <div class="time__section">
           <h3 class="time__section--title">za:</h3>
-          <h3 class="time__section--number"><p class="info__box--text">TeleTaxi (tel. 55 233 24 44)<a href="tel:552332444"><i
-            class="fa-solid fa-phone info__box--animation"></i></a></p></h3>
+          <h3 class="time__section--number">
+            <p class="info__box--text">TeleTaxi (tel. 55 233 24 44)<a href="tel:552332444"><i
+                  class="fa-solid fa-phone info__box--animation"></i></a></p>
+          </h3>
           <div class="time__section__cards">
             <div class="card">
               <p class="days number"></p>
@@ -174,8 +176,10 @@
           allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <button class="button"><a class="button--link"
-        href="https://www.google.com/maps/search/?api=1&query=Nowa+Holandia+-+Grill+Bar+i+Restauracja" target="_blank"
-        rel="noopener noreferrer"><p class="button--text">link do mapy</p></a></button>
+          href="https://www.google.com/maps/search/?api=1&query=Nowa+Holandia+-+Grill+Bar+i+Restauracja" target="_blank"
+          rel="noopener noreferrer">
+          <p class="button--text">link do mapy</p>
+        </a></button>
     </div>
   </section>
 
@@ -231,7 +235,9 @@
       <div class="photos__box">
         <p class="photos__box--text">Link do zdjęć prześlemy Wam, gdy tylko otrzymamy go od fotografa :)</p>
       </div>
-      <button class="button"><a class="button--link" href="#" target="_blank" ><p class="button--text">dodaj zdjęcie</p></a></button>
+      <button class="button"><a class="button--link" href="#" target="_blank">
+          <p class="button--text">dodaj zdjęcie</p>
+        </a></button>
     </div>
 
     <footer class="footer">
