add wedding date to home page

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       <div class="header__timer__body">
         <div class="time__section">
           <h3 class="time__section--title">za:</h3>
-          <h3 class="time__section--number"><p class="info__box--text">TeleTaxi (tel. 55 233 24 44)<a href="tel:552332444"><i
-            class="fa-solid fa-phone info__box--animation"></i></a></p></h3>
+          <h3 class="time__section--number">
+            <p class="info__box--text">TeleTaxi (tel. 55 233 24 44)<a href="tel:552332444"><i
+                  class="fa-solid fa-phone info__box--animation"></i></a></p>
+          </h3>
           <div class="time__section__cards">
             <div class="card">
               <p class="days number"></p>
@@ -43,6 +45,7 @@
       </div>
       <div class="addMap"></div>
     </div>
+    <h2 class="header__date">15.09.2023 <br>16:30</h2>
   </header>
 
   <button class="burger-btn">
