add wedding plan

--- a/index.html
+++ b/index.html
@@ -188,7 +188,20 @@
     <div class="wrapper">
       <h2 class="section-heading">plan wesela</h2>
       <div class="plan__box">
-        <p class="plan__box--text">Plan wesela pojawi się około 2 tygodnie przed ślubem :)</p>
+        <ol>
+          <li>
+            <h3 class="plan__box--text">Ceremonia</h3>
+          </li>
+          <li>
+            <h3 class="plan__box--text">Wspólne zdjecia</h3>
+          </li>
+          <li>
+            <h3 class="plan__box--text">Uroczysta kolacja</h3>
+          </li>
+          <li>
+            <h3 class="plan__box--text">Oczepiny</h3>
+          </li>
+        </ol>
       </div>
     </div>
   </section>
@@ -240,13 +253,14 @@
           <p class="button--text">dodaj zdjęcie</p>
         </a></button>
     </div>
+  </section>
 
-    <footer class="footer">
-      <div class="wrapper"></div>
-    </footer>
+  <footer class="footer">
+    <div class="wrapper"></div>
+  </footer>
 
 
-    <script src="js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
