add wedding plan

--- a/index.html
+++ b/index.html
@@ -190,16 +190,24 @@
       <div class="plan__box">
         <ol>
           <li>
-            <h3 class="plan__box--text">Ceremonia</h3>
+            <img class="plan__box--icons" src="./img/icons/wedding-arch_8044755.png">
+            <p class="plan__box--text">Ceremonia</p>
           </li>
           <li>
-            <h3 class="plan__box--text">Wspólne zdjecia</h3>
+            <img class="plan__box--icons" src="./img/icons/camera_4571141.png">
+            <p class="plan__box--text">Wspólnie zdjęcia</p>
           </li>
           <li>
-            <h3 class="plan__box--text">Uroczysta kolacja</h3>
+            <img class="plan__box--icons" src="./img/icons/serving-dish_1046874.png">
+            <p class="plan__box--text">Uroczysta kolacja</p>
           </li>
           <li>
-            <h3 class="plan__box--text">Oczepiny</h3>
+            <img class="plan__box--icons" src="./img/icons/dance_3074317.png">
+            <p class="plan__box--text">Pierwszy taniec</p>
+          </li>
+          <li>
+            <img class="plan__box--icons" src="./img/icons/fireworks_415651.png">
+            <p class="plan__box--text">Oczepiny</p>
           </li>
         </ol>
       </div>
