--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <header id="home" class="header section">
     <h1 class="header__heading">Pobieramy się!</h1>
-    <h2 class="header__date">15.09.2023 <br>16:30</h2>
+    <!-- <h2 class="header__date">15.09.2023 <br>16:30</h2> -->
     <div class="header__timer">
       <div class="header__timer__body">
         <div class="time__section">
