--- a/index.html
+++ b/index.html
@@ -18,17 +18,16 @@
 
 <body>
   <header id="home" class="header section">
-    <h1 class="header__heading">Pobieraliśmy się!</h1>
+    <h1 class="header__heading">Pobraliśmy się!</h1>
     <div class="header__timer">
       <div class="header__timer__body">
         <div class="time__section">
           <div class="time__section__cards">
             <div class="card">
               <p class="days number"></p>
-              <p class="card__title">dni</p>
+              <p class="card__title">dni temu</p>
             </div>
           </div>
-          <h3 class="time__section--title">temu</h3>
         </div>
       </div>
       <div class="addMap"></div>
