add share photo button

--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
     <div class="wrapper">
       <h2 class="section-heading">zdjęcia</h2>
       <div class="photos__box">
-        <p class="photos__box--text">Link do zdjęć prześlemy Wam, gdy tylko otrzymamy go od fotografa :)</p>
+        <p class="photos__box--text">Już są!</p>
       </div>
       <button class="button"><a class="button--link" href="#" target="_blank">
-          <p class="button--text">dodaj zdjęcie</p>
+          <p class="button--text">Przejdź do zdjęć</p>
         </a></button>
     </div>
   </section>
