--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       <div class="photos__box">
         <p class="photos__box--text">Już są!</p>
       </div>
-      <button class="button"><a class="button--link" href="#" target="_blank">
+      <button class="button"><a class="button--link" href="https://drive.google.com/drive/folders/1mlKffFzihZ6D-hJvf7-ZxwwpEsDf_Jqt?usp=sharing" target="_blank">
           <p class="button--text">Przejdź do zdjęć</p>
         </a></button>
     </div>
